add_subdirectory(Util)
add_subdirectory(Sensor)

add_subdirectory(Alos2Proc)
add_subdirectory(Alos2burstProc)
add_subdirectory(Attitude)
add_subdirectory(Catalog)
add_subdirectory(Constants)
add_subdirectory(Doppler)
add_subdirectory(Filter)
add_subdirectory(Image)
add_subdirectory(ImageFilter)
add_subdirectory(InsarProc)
add_subdirectory(IsceProc)
add_subdirectory(LineAccessor)
add_subdirectory(Location)
add_subdirectory(Orbit)
add_subdirectory(Planet)
add_subdirectory(Platform)
add_subdirectory(Radar)
add_subdirectory(Registry)
add_subdirectory(Renderer)
add_subdirectory(RtcProc)
add_subdirectory(Scene)
add_subdirectory(Stack)
add_subdirectory(StripmapProc)
add_subdirectory(TopsProc)
add_subdirectory(Unwrap)
add_subdirectory(XmlUtil)

InstallSameDir(__init__.py)
