add_subdirectory(Compatibility)
add_subdirectory(Component)
add_subdirectory(DataManager)
add_subdirectory(DataRetriever)
add_subdirectory(DateTimeUtil)
add_subdirectory(DebugLiner)
add_subdirectory(DictUtils)
add_subdirectory(Display)
add_subdirectory(Dumpers)
add_subdirectory(ImageApi)
add_subdirectory(ImageUtil)
add_subdirectory(Parsers)
add_subdirectory(StdOE)
add_subdirectory(StdOEL)
add_subdirectory(Stitcher)
add_subdirectory(Traits)

InstallSameDir(__init__.py)
