add_subdirectory(aikima)
add_subdirectory(ampcor)
add_subdirectory(baseline)
add_subdirectory(correlation)
add_subdirectory(dopav)
add_subdirectory(dopiq)
add_subdirectory(doppler)
add_subdirectory(filter)
add_subdirectory(fitoff)
add_subdirectory(formimage)
add_subdirectory(getPegInfo)
add_subdirectory(geolocate)
add_subdirectory(grass)
add_subdirectory(icu)
add_subdirectory(looks)

InstallSameDir(__init__.py)
